--- a/ukol_lekce4-reseni (1)/projekt1-profil-reseni/profil.html
+++ b/ukol_lekce4-reseni (1)/projekt1-profil-reseni/profil.html
@@ -5,8 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Profil: Jana Czechita</title>
         <link rel="stylesheet" type="text/css" href="style.css">
-        <link href="https://fonts.googleapis.com/css?family=Montserrat|Source+Sans+Pro&display=swap" rel="stylesheet">
-        
+        <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Source+Sans+Pro" rel="stylesheet">
     </head>
     <body>
 
