projekt 5 - Jirka - flexbox

--- a/projekt_5-Jirka flexbox/profil.html
+++ b/projekt_5-Jirka flexbox/profil.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Profil: Jana Czechita</title>
+        <title>Profil: Jirka Flexbox Czechita</title>
         <link rel="stylesheet" type="text/css" href="style.css">
         <link href="https://fonts.googleapis.com/css?family=Montserrat|Source+Sans+Pro&display=swap" rel="stylesheet">
         
@@ -30,7 +30,7 @@
 
             </div>
 
-            <ul class="odkazy">
+            <ul class="flex-container">
                 <li class="portfolio"><a href="#">Moje portfolio</a></li><!--
                 --><li class="facebook"><a href="#">Facebook</a></li><!--
                 --><li class="twitter"><a href="#">Twitter</a></li>
